fix input check spacing

--- a/onboarding/stylesheets/css/forms.css
+++ b/onboarding/stylesheets/css/forms.css
@@ -64,7 +64,8 @@ input {
   .dg-form-check-label {
     margin-bottom: 0;
     top: 4px;
-    font-size: 12px;
+    font-size: 14px;
+    position: relative;
 }
-  }
+
   
